Fix dark mode color

--- a/styles/pages/index.fullscreen.module.css
+++ b/styles/pages/index.fullscreen.module.css
@@ -34,14 +34,14 @@
   outline-color: #adadad;
   padding-right: 90px;  /* make space for the button */
   box-sizing: border-box;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
   box-shadow: 0.21875rem 0.21875rem 0.875rem rgba(139, 139, 139, 0.4);
   background-color: var(--background-color);
   color: var(--text-color);
 }
 .main ::placeholder {
-  color: #8e8ea0;
+  color: var(--placeholder-color);
   opacity: 1;
 }
 .main .submit {
@@ -51,14 +51,14 @@
   top: 50%;
   transform: translateY(-50%);  /* vertically center the button */
   background-color: var(--button-color);
-  color: #fff;
+  color: var(--button-text-color);
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 .main .submit:hover {
-  background-color: #828282;  /* darken the button color on hover */
+  background-color: var(--button-hover-color);  /* darken the button color on hover */
 }
 .main .wrapper {
   width: 100%;
